src/org/modula/parsing/grammar/P1CompileTime.bnf


{
  parserClass="org.modula.parsing.compile.time.p1.P1ConditionParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="P1CompileTimeCondition"
  psiImplClassSuffix="Impl"
  psiPackage="org.modula.parsing.compile.time.p1.psi"
  psiImplPackage="org.modula.parsing.compile.time.psi.p1.impl"

  elementTypeHolderClass="org.modula.parsing.compile.time.p1.psi.CompileTimeConditionTypes"
  elementTypeClass="org.modula.parsing.psi.P1CompileTimeElementType"
  tokenTypeClass="org.modula.parsing.psi.P1CompileTimeTokenType"
}

condition ::= disjunction

disjunction ::= conjunction OR disjunction | conjunction

conjunction ::= negation AND conjunction | negation

negation ::= NOT negation | term

term ::= TAG | TRUE | FALSE | OPEN_BRACKET disjunction CLOSE_BRACKET


